# qt5-polkit-agent

./: CMakeLists.txt  PKGBUILD
autostart/: qt5-polkit-agent.desktop
src/: main.cpp
